Inserido: - Título principal; - Um parágrafo com uma breve descrição sobre Git e GitHub.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!
 <!DOCTYPE html>
 
 <html lang="pt-BR">
@@ -13,6 +12,10 @@
 </head>
 
 <body>
+    <h1>Git e GitHub</h1>
+    <p>
+        Git é um sistema de controle de versão distribuído que permite aos desenvolvedores rastrear mudanças no código-fonte durante o desenvolvimento de software. Ele facilita a colaboração entre múltiplos desenvolvedores, permitindo que eles trabalhem em diferentes partes do projeto simultaneamente sem conflitos. GitHub, por outro lado, é uma plataforma de hospedagem de código-fonte baseada na web que utiliza o Git como sistema de controle de versão. Ele oferece uma interface amigável para gerenciar repositórios Git, além de recursos adicionais como rastreamento de problemas, revisão de código e integração contínua. Em resumo, Git é a ferramenta de controle de versão, enquanto GitHub é um serviço que utiliza essa ferramenta para facilitar a colaboração e o gerenciamento de projetos de software.
+    </p>
 
 </body>
 
