--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <p>
         Git é um sistema de controle de versão distribuído que permite aos desenvolvedores rastrear mudanças no código-fonte durante o desenvolvimento de software. Ele facilita a colaboração entre múltiplos desenvolvedores, permitindo que eles trabalhem em diferentes partes do projeto simultaneamente sem conflitos. GitHub, por outro lado, é uma plataforma de hospedagem de código-fonte baseada na web que utiliza o Git como sistema de controle de versão. Ele oferece uma interface amigável para gerenciar repositórios Git, além de recursos adicionais como rastreamento de problemas, revisão de código e integração contínua. Em resumo, Git é a ferramenta de controle de versão, enquanto GitHub é um serviço que utiliza essa ferramenta para facilitar a colaboração e o gerenciamento de projetos de software.
     </p>
+    <section>
+        <h2>Utilidade</h2>
+        <p>
+            * Controle de Versão e Histórico: Permite rastrear alterações no código, 
+            reverter para versões anteriores e gerenciar diferentes ramos (branches) de desenvolvimento, 
+            garantindo segurança ao trabalhar no código.
+            * Colaboração Eficiente: Facilita o trabalho em equipe através de Pull Requests (solicitações de alteração), 
+            revisão de código, discussões encadeadas e gestão de problemas (Issues), permitindo que múltiplos desenvolvedores 
+            colaborem sem sobrescrever o trabalho alheio.
+        </p>
+    </section>
 
 </body>
 
