Criado o arquivo "estilo.css"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Git e GitHub</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -19,12 +19,10 @@
     <section>
         <h2>Utilidade</h2>
         <p>
-            * Controle de Versão e Histórico: Permite rastrear alterações no código, 
-            reverter para versões anteriores e gerenciar diferentes ramos (branches) de desenvolvimento, 
-            garantindo segurança ao trabalhar no código.
-            * Colaboração Eficiente: Facilita o trabalho em equipe através de Pull Requests (solicitações de alteração), 
-            revisão de código, discussões encadeadas e gestão de problemas (Issues), permitindo que múltiplos desenvolvedores 
-            colaborem sem sobrescrever o trabalho alheio.
+            Controle de Versão e Histórico: Permite rastrear alterações no código, reverter para versões anteriores e gerenciar diferentes ramos (branches) de desenvolvimento, garantindo segurança ao trabalhar no código.
+        </p>
+        <p>
+            Colaboração Eficiente: Facilita o trabalho em equipe através de Pull Requests (solicitações de alteração), revisão de código, discussões encadeadas e gestão de problemas (Issues), permitindo que múltiplos desenvolvedores colaborem sem sobrescrever o trabalho alheio.
         </p>
     </section>
 
