--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Git e GitHub</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="img/ico-github.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
